# Shadow-Deployment-MLOps-Rig

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: retrain.yml
data/: .gitkeep
feature_repo/: definitions.py  feature_store.yaml
monitoring/: __init__.py  detect_drift.py  prometheus.yml
monitoring/reports/: .gitkeep
scripts/: __init__.py  pull_training_data.py  train_model.py
src/: __init__.py  api.py  config.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_drift.py  test_models.py
